# webgpu-test

./: CMakeLists.txt  LICENSE  README.md  app.cpp  app.h  helpers.h  main.cpp  shader.h  shaders.wgsl
glfw3webgpu/: CMakeLists.txt
shaders/: compute.wgsl  render.wgsl
